--- a/quiz-App/index.html
+++ b/quiz-App/index.html
@@ -34,7 +34,10 @@
                 <input name="option" type="radio" id="fourth" value="d" required>
                 <label for="fourth">Testing 4</label>
             </div>
-            <button id="submit">Submit</button>
+            <button id="submit">
+                <span> Submit
+                </span>
+              </button>
         </div>
 
     </section>
