--- a/show-hide-pass/index.html
+++ b/show-hide-pass/index.html
@@ -19,7 +19,7 @@
             <input type="password" name="" id="" placeholder="Enter Password">
             <img src="./icons/unhide.svg" alt="">
         </div>
-        <button>Reset password</button>
+        <button disabled >Reset password</button>
       </div>
     </div>
     </div>
