--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
         <a class="card-link" href="https://manascodr.github.io/50-Html-css-javascript-projects/simple-stopwatch/" target="_blank">Open Live</a>
       </div>
     </div>
+    <div class="card">
+      <iframe class="preview" src="https://manascodr.github.io/50-Html-css-javascript-projects/random-quotes/"></iframe>
+      <div class="card-content">
+        <div class="card-title">Random Quotes generator</div>
+        <a class="card-link" href="https://manascodr.github.io/50-Html-css-javascript-projects/random-quotes/" target="_blank">Open Live</a>
+      </div>
+    </div>
 
   </div>
 </body>
