--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
         <a class="card-link" href="https://manascodr.github.io/50-Html-css-javascript-projects/random-quotes/" target="_blank">Open Live</a>
       </div>
     </div>
+    <div class="card">
+      <iframe class="preview" src="https://manascodr.github.io/50-Html-css-javascript-projects/images-hover-effect/"></iframe>
+      <div class="card-content">
+        <div class="card-title">Multiple images hover effect</div>
+        <a class="card-link" href="https://manascodr.github.io/50-Html-css-javascript-projects/images-hover-effect/" target="_blank">Open Live</a>
+      </div>
+    </div>
 
   </div>
 </body>
