--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900 text-gray-100 min-h-screen">
 
   <header class="text-center py-10">
-    <h1 class="text-4xl font-bold mb-2">🚀 50 JS Projects by <span class="text-cyan-400">Manas</span></h1>
+    <h1 class="text-4xl font-bold mb-2">🚀 15+ JS Projects by <span class="text-cyan-400">Manas</span></h1>
     <p class="text-gray-400">Live preview • <a class="text-cyan-400 underline hover:text-cyan-300" target="_blank" href="https://github.com/ManasCodr/50-Html-css-javascript-projects">GitHub Repo</a></p>
   </header>
 
@@ -136,6 +136,9 @@
       
     </div>
   </main>
+  <footer class="text-center py-4">
+    <p> &copy; <span id="year"></span> ManasCodr. Built with ❤️ and Vanilla JS.</p>
+  </footer>
 
 </body>
 </html>
